# bicec-veripass

./: .gitignore  .old_clinerules  Document de Cadrage Projet.md  M1  Cadrage & Dataset.txt  README-bmad.md  Rapport d'Avancement V7 - Mars 2025.pptx  all_issues_orange_sms_patch.md  package-lock.json  package.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
_bmad-output/: project-context.md
backend/: ibu_logic.py
code/: .dockerignore  .env.example  CONTRIBUTING.md  README.md  docker-compose.yml
code/backend/: .env.example  Dockerfile  LOCAL_TO_DOCKER.md  healthcheck.py  journal.md  pyproject.toml
code/backend/alembic/: env.py
code/backend/app/: main.py
code/backend/app/api/v1/: aml.py  backoffice.py  kyc.py  notifications.py  router.py
code/backend/app/core/: config.py  exceptions.py  logging.py  security.py
code/backend/app/db/: session.py
code/backend/app/modules/admin/: models.py  router.py
code/backend/app/modules/aml/: router.py  service.py
code/backend/app/modules/analytics/: router.py  schemas.py
code/backend/app/modules/auth/: router.py
code/backend/app/modules/backoffice/: router.py
code/backend/app/modules/kyc/: router.py
code/backend/app/modules/notifications/: router.py
code/backend/tests/: conftest.py  test_health.py
docs/: Fonctionnalité_Interaction_Erreurs.csv  Fonctionnalité_Interaction_Erreurs.md  Screenshot_References.csv  correction-roadmap.md.resolved  notes.md  stitch-prompts.md
paddleocr_test/: setup_environment.txt  test_kyc.py  test_ocr.py  test_structure.py
(+155 files in other folders)
